<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>java-unit-testing</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>java-unit-testing</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
  </properties>

  <dependencies>
<!--    <dependency>-->
<!--      <groupId>junit</groupId>-->
<!--      <artifactId>junit</artifactId>-->
<!--      <version>4.12</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->

<!--      junit 5 dependencies-->

<!--    <dependency>-->
<!--      <groupId>org.mockito</groupId>-->
<!--      <artifactId>mockito-core</artifactId>-->
<!--      <version>3.12.4</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->

<!--    <dependency>-->
<!--      <groupId>org.junit.jupiter</groupId>-->
<!--      <artifactId>junit-jupiter-api</artifactId>-->
<!--      <version>5.9.1</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->

<!--    <dependency>-->
<!--      <groupId>org.junit.jupiter</groupId>-->
<!--      <artifactId>junit-jupiter-engine</artifactId>-->
<!--      <version>5.9.1</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->


    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.9.1</version>
      <scope>test</scope>
    </dependency>
<!--      some conflict in versioning with power-mocking-->
<!--      <dependency>-->
<!--          <groupId>org.powermock</groupId>-->
<!--          <artifactId>powermock-module-junit4</artifactId>-->
<!--          <version>2.0.9</version>-->
<!--          <scope>test</scope>-->
<!--      </dependency>-->

<!--      <dependency>-->
<!--          <groupId>org.powermock</groupId>-->
<!--          <artifactId>powermock-api-mockito2</artifactId>-->
<!--          <version>2.0.9</version>-->
<!--          <scope>test</scope>-->
<!--      </dependency>-->
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-inline</artifactId>
          <version>3.12.4</version>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.12</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>4.5.1</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-all</artifactId>
          <version>1.10.19</version>
          <scope>test</scope>
      </dependency>

      <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
      <dependency>
          <groupId>org.hamcrest</groupId>
          <artifactId>hamcrest-all</artifactId>
          <version>1.3</version>
          <scope>test</scope>
      </dependency>




  </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version> <!-- Use the latest version -->
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
